--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "postcss": "^8.4.31",
     "@antfu/eslint-config": "^3.12.1",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
